--- a/UI/src/components/afterSignup/applicantPage/candidate.css
+++ b/UI/src/components/afterSignup/applicantPage/candidate.css
@@ -13,6 +13,19 @@
     background-color: yellow;
 }
 
+.logo{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    padding: 30%;
+    cursor: pointer;
+}
+
+
+img{
+    height: 35px;
+}
+
 .main-section{
     height: 100%;
     width: 100%;
@@ -30,4 +43,15 @@
     width: 50%;
     height: 100%;
     background-color: pink;
+}
+
+.header{
+    width: 100%;
+    height: 10%;
+    background-color: lightblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    font-weight: 500;
 }
