--- a/UI/src/components/afterSignup/applicantPage/candidate.css
+++ b/UI/src/components/afterSignup/applicantPage/candidate.css
@@ -11,13 +11,16 @@
     height: 100vh;
     width: 7vw;
     background-color: yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logo{
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    padding: 30%;
+    padding: 30% 0%;
     cursor: pointer;
 }
 
@@ -54,4 +57,15 @@ img{
     justify-content: center;
     font-size: 25px;
     font-weight: 500;
+}
+
+.content-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    overflow-y: scroll;
+    width: 100%;
+    height: 90%;
 }
