Updating Candidate View modules

--- a/UI/src/components/afterSignup/common/common.css
+++ b/UI/src/components/afterSignup/common/common.css
@@ -9,6 +9,11 @@
     justify-content: space-around;
     align-items: center;
     margin: 20px;
+    cursor: pointer;
+}
+
+.upload-wrapper:hover{
+    background-color: cadetblue;
 }
 
 .upload-logo{
