--- a/UI/src/App.css
+++ b/UI/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .App-logo {
