--- a/UI/src/components/afterSignup/common/common.css
+++ b/UI/src/components/afterSignup/common/common.css
@@ -1,7 +1,7 @@
 .upload-wrapper{
-    width: 70%;
-    height: 50px;
-    background-color: aliceblue;
+    width: 50%;
+    height: 60px;
+    background-color: #949498;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
 }
 
 .upload-logo{
-    padding-bottom: 0%;
+    padding: 0%;
     margin-bottom: 0%;
 }
 
