--- a/UI/src/components/afterSignup/applicantPage/candidate.css
+++ b/UI/src/components/afterSignup/applicantPage/candidate.css
@@ -49,8 +49,10 @@ img{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: 5px;
+    color: navy;
 }
 
 .content-list{
