--- a/UI/src/components/afterSignup/common/common.css
+++ b/UI/src/components/afterSignup/common/common.css
@@ -1,3 +1,31 @@
+.navbar{
+    height: 100vh;
+    width: 7vw;
+    background-color: #D2DAFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    padding: 30% 0%;
+    cursor: pointer;
+}
+
+img{
+    height: 35px;
+}
+
+.username{
+    font-size: 12px;
+    padding: 0%;
+    margin-bottom: 50%;
+    margin-top: -10%;
+}
+
 .upload-wrapper{
     width: 50%;
     height: 60px;
