--- a/UI/src/components/afterSignup/common/common.css
+++ b/UI/src/components/afterSignup/common/common.css
@@ -1,3 +1,9 @@
+.home-page-wrapper{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+}
+
 .navbar{
     height: 100vh;
     width: 7vw;
@@ -80,4 +86,84 @@ img{
 
 .table-header{
     font-weight: 800 !important;
+}
+
+
+/* Circular Percentage Progress Bar */
+.percent-div-wrapper{
+    height: 100%;
+    width: 90%;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e1e5f6;
+    border-radius: 5%;
+}
+
+.percent-div-text{
+    height: 20%;
+    font-family: serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: navy;
+    /* display: flex; */
+    text-align: center;
+}
+
+.percent-div-cpb{
+    width: 50%;
+    height: 50%;
+}
+
+/* Text row */
+.text-div-wrapper{
+    height: 90%;
+    width: 90%;
+    margin: 1%;
+    padding: 0.5% 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e1e5f6;
+    border-radius: 5%;
+}
+
+.text-div-header{
+    height: 20%;
+    padding: 5%;
+    font-family: serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: navy;
+    text-align: center;
+}
+
+.text-div-text{
+    padding-top: 5%;
+    font-family: sans-serif;
+    font-size: 50px;
+    font-weight: 800;
+    color: #3e98c7;
+    text-align: center;
+}
+
+.loader{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.loading{
+    opacity: 0.5;
+}
+
+.loader-visible{
+    display: flex;
 }
