--- a/UI/src/components/landingPage/login.css
+++ b/UI/src/components/landingPage/login.css
@@ -1,61 +1,94 @@
-.loginText{
-    position: absolute;
-    top: 245px;
-    right: 500px;
-    font-family: Helvetica;
-    font-size: 26px;
-}
-.emailText{
-    position: absolute;
-    top: 320px;
-    right: 505px;
-    font-family: Helvetica;
-    font-size: 20px;
-}
-.emailBox{
-    position: absolute;
-    top: 345px;
-    right: 215px;
-    width: 340px;
-    height: 40px;
-    background: #D9D9D9;
-}
-.passwordText{
-    position: absolute;
-    top: 400px;
-    right: 466px;
-    font-family: Helvetica;
-    font-size: 20px;
-}
-.passwordBox{
-    position: absolute;
-    top: 425px;
-    right: 215px;
-    width: 340px;
-    height: 40px;
-    background: #D9D9D9;
-}
-.signInButtom{
-    position: absolute;
-    top: 490px;
-    right: 215px;
-    width: 340px;
-    height: 40px;
-    background: #416FE4;
+.login-page-wrapper{
+    height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
     display: flex;
+    overflow-x: hidden;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    flex-direction: column;
+}
+
+.login-form{
+    height: 450px;
+    width: 400px;
+    border-radius: 20px;
+    background-color: #FFFFFF;
+}
+
+.login-form-wrapper{
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center
+}
+
+.header-text{
+    padding: 10% 0% 0% 0%;
+}
+
+.login-form-input-wrapper{
+
+    height: 330px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #ffffff;
 }
-.createAccButtom{
-    position: absolute;
-    top: 545px;
-    right: 215px;
-    width: 340px;
-    height: 40px;
-    background: #C3D1F5;
+
+input{
+    display: block;
+    padding:7px 12px 7px;
+    border:1px solid #d9d9d9;
+    border-radius:5px;
+    height:50px;
+    color: #444;
+    font-size: 16px;
+    font-weight: 400;
+    width: 300px;
+    outline: 0;
+    margin: 4% 0%;
+}
+
+.login-form-password-wrapper{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    color: #3468eb;
+    margin: 20px 0px 20px 10px;
+}
+
+.password{
+    -webkit-text-security: disc;
+}
+
+
+.login-form-submit{
+    width: 300px;
+    margin-top: 15px;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0.25em 2em;
+    text-decoration: none;
+    border-radius: 5px;
+    user-select: none;
+    cursor: pointer;
+    outline: 0;
+    font-size: 18px;
+    font-weight: 600;
+    border: 2px solid #7CB9E8;
+    color: #fff;
+    background:#7CB9E8;
+    height: 50px;
+}
+
+.footer{
+    height: 10vh;
+    width: 100vw;
+    background-color: rgb(176, 172, 172);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
